tidyin' up stylin'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
   <link rel="stylesheet" type="text/css" href="assets/styles/main.css">
-
 </head>
 <body>
 
@@ -84,13 +83,11 @@
   <!-- FOOTER! -->
   <footer class="footer">
     <div class="container">
-      <p class="text-muted">Place sticky footer content here.</p>
-      <div id="dv">image</div>
+      <p class="text-muted"></p>
+      <div id="dv" style="padding-bottom:20px">image</div>
     </div>
   </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/<react-version>/react.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/<react-version>/react-dom.min.js"></script>
 <script src="bundle.js"></script>
 </body>
 </html>
